--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="calculator-container">
+  <div id="calculator-container">
     <div id="display">0</div>
     <button id="clear">C</button>
     <button class="regular-button" id="backspace">&#8592;</button>
